[gd_scene load_steps=3 format=3 uid="uid://d3yb4swaosx4i"]

[ext_resource type="Script" path="res://Scripts/ratPack.gd" id="1_quw4d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ps03p"]
radius = 426.264

[node name="Player" type="CharacterBody2D"]
collision_mask = 34
script = ExtResource("1_quw4d")

[node name="FleeArea" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeArea"]
shape = SubResource("CircleShape2D_ps03p")
debug_color = Color(0.887164, 0.330227, 0, 0.0392157)

[node name="BasicRatBodies" type="Node2D" parent="."]

[node name="GrabOthers" type="Area2D" parent="." groups=["PlayerRat"]]
collision_mask = 2
monitorable = false

[node name="CenterPivot" type="Polygon2D" parent="."]
color = Color(1, 0, 0.278431, 1)
polygon = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="area_entered" from="GrabOthers" to="." method="_on_grab_others_area_entered"]
[connection signal="area_exited" from="GrabOthers" to="." method="_on_grab_others_area_exited"]
